# OpenGL-Triangle

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: gl.h
